# WeatherApp

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/: .env  .gitignore  .txt  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
backend/migrations/2025-02-20-141049_weather/: up.sql
backend/migrations/2025-06-18-063716_create_api_logs/: down.sql  up.sql
backend/migrations/2025-06-19-091601_add_default_to_logs_id/: down.sql  up.sql
backend/migrations/2025-06-19-094253_add_default_now_to_timestamp/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/auth0/: auth0.rs
backend/src/auth0_routes/: auth0.rs
backend/src/common/: mod.rs
backend/src/config/: cors.rs
backend/src/config_cors/: cors.rs
backend/src/jwt/: jwt_guards.rs  jwt_routes.rs  jwt_utility.rs  mod.rs
backend/src/models/: mod.rs  weather.rs
backend/src/redis_utility/: utility.rs
backend/src/repositories/: api_logs_repository.rs  mod.rs  weather_repository.rs
backend/src/rocket_routes/: api_logs_route.rs  mod.rs  weather_route.rs
backend/src/swagger/: mod.rs
backend/src/tests/: mod.rs  models.rs  redis_test.rs  weather_test.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  style.css
frontend/src/: main.rs
frontend/src/api/: api.rs
frontend/src/assets/: utility.rs
frontend/src/components/: front_image.rs  input_button.rs  login.rs  login_button.rs  login_modal.rs  mod.rs  spinner.rs  user_info.rs  weather_card.rs
frontend/src/models/: mod.rs
frontend/src/pages/: admin_page.rs  front_image.rs  frontpage.rs  home.rs  mod.rs
migrations/2025-02-20-141049_weather/: down.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  schema.rs
src/common/: mod.rs
src/models/: weather.rs
src/rocket_routes/: mod.rs
