[package]
name = "weatherapp"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = {version = "2.2.0", features = ["postgres"]}
rocket_sync_db_pools = {version = "0.1.0-rc", features = ["diesel_postgres_pool"]}
dotenv = "0.15"
reqwest = "0.12.12"
serde_json = "1.0"
serde = "1.0.218"