[package]
name = "frontend"
version = "0.1.0"
edition = "2021"



[dependencies]
wasm-bindgen = "0.2.100"
yew = { "version" = "0.21.0", features = ["csr"]}
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
shared = { path = "../shared" }
web-sys = "0.3.77"
gloo = "0.11.0"