[package]
name = "frontend"
version = "0.1.0"
edition = "2021"



[dependencies]
wasm-bindgen = "0.2.100"
yew = { "version" = "0.21.0", features = ["csr"]}
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
shared = { path = "../shared" }
web-sys = "0.3.77"
gloo = "0.11.0"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["wasmbind", "clock"] }
reqwasm = "0.5.0"
uuid = {version = "1.17.0", features = ["v4"]}
yew-notifications = { version = "0.2.0", features = ["standard-notification"] }
time = "0.3.41"